Switch to sbt-lucuma